# openjck-cloud

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  README.md  openjck-master-truth.md  pyproject.toml  render.yaml  skills-lock.json
dashboard/: AGENTS.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
docs/protocol/: v1.md
openjck/: AGENTS.md  __init__.py  alerts.py  claw.py  config.py  guard.py  loop_detector.py  protocol.py  replay.py
openjck/llm/: __init__.py  base.py  factory.py  pricing.py
server/: AGENTS.md  Dockerfile  db.js  package-lock.json  package.json  server.js  sse-emitter.js  test-ai-fix.js
server/config/: guards.js  pricing.js  replay.js
server/lib/: encryption.js  ttl-cache.js
server/middleware/: api-key-auth.js  error-handler.js  jwt-auth.js  rate-limit.js  require-role.js  validate.js
server/models/: clawSession.js  fleet.js  index.js  orgAiKey.js  stepPackets.js
server/routes/: ai-fix.js  aiKeys.js  alerts.js  api-keys.js  events.js  fleet.js  health.js  orgs.js  protocol.js  sessions.js  sse.js
server/services/: anthropicClient.js
supabase/: AGENTS.md  config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260401000001_organizations.sql  20260401000002_users_and_members.sql  20260401000003_api_keys.sql  20260401000004_claw_sessions.sql  20260401000005_step_packets.sql  20260401000006_api_key_usage.sql  20260401000007_rls_policies.sql  20260401000008_audit_logs.sql  (+4 more)
tests/: conftest.py  test_alerts.py  test_claw.py  test_protocol.py  test_replay.py
(+76 files in other folders)
